# gits

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md  commands.py  diagram.drawio  git_commands.py  gits.py  pytest.ini  scheduler.py  setup.py  storage.py  testcases.md
.github/workflows/: build-docker.yml  deploy-lambdas.yml  e2e-tests.yml  release.yml  update-lambdas.yml  vpc-test.yml
backend/: CMakeLists.txt  Makefile  compile.sh  gits.cpp  gits.sh  gits2.cpp
cloudformation/: README.md  apigateway.yaml  codebuild.yaml  delete-resources.sh  deploy-all.sh  dynamodb.yaml  ecr.yaml  eventbridge.yaml  iam.yaml  lambdas.yaml  s3.yaml  secretmanager.yaml  vpc.yaml
codebuild/: buildspec.yaml
codebuildlense_lambda/: CMakeLists.txt  Dockerfile  deploy.sh  lambda_function.cpp  lambda_function.py
codebuildlense_lambda/baseimage/: Dockerfile  build_and_push.sh
codebuildlense_lambda/cpp/: Dockerfile  deploy.sh
delete_lambda/: CMakeLists.txt  Dockerfile  deploy.sh  lambda_function.cpp  lambda_function.py
delete_lambda/baseimage/: Dockerfile  build_and_push.sh
delete_lambda/cpp/: Dockerfile  deploy.sh  lambda_function.cpp
deployment/: deploy.sh  deploy_backend.sh  deploy_codebuildlense_lambda.sh  deploy_delete_lambda.sh  deploy_getstatus_lambda.sh  deploy_gitsops_lambda.sh  deploy_lambda.sh
diagram/: diagram.drawio
getstatus_lambda/: Dockerfile  deploy.sh  lambda_function.cpp  lambda_function.py
getstatus_lambda/baseimage/: Dockerfile  build_and_push.sh
getstatus_lambda/cpp/: CMakeLists.txt  deploy.sh  lambda_function.cpp
gitsops_lambda/: CMakeLists.txt  Dockerfile  deploy.sh  lambda_function.cpp  lambda_function.py
gitsops_lambda/baseimage/: Dockerfile  build_and_push.sh
gitsops_lambda/cpp/: deploy.sh  lambda_function.cpp
iam_roles/: codebuild-permission-policy.json  eventbridge-permission-policy.json  generate_policies.py
lambda_function/: __init__.py  lambda_function.py  lambda_handler.py
lambda_function/tests/: test_lambda_handler_pytest.py
local/: gits.sh
schedule_lambda/: Dockerfile  deploy.sh  lambda_function.cpp
schedule_lambda/baseimage/: Dockerfile  build_and_push.sh
src/: commands.py  git_commands.py  gits.py  scheduler.py
status_lambda/: CMakeLists.txt  Dockerfile  deploy.sh  lambda_function.cpp
status_lambda/baseimage/: Dockerfile  build_and_push.sh
terraform/: .gitignore  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/apigateway/: main.tf  outputs.tf  variables.tf
terraform/modules/codebuild/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/scripts/: assume-role.sh  bootstrap-iam.sh  build-and-push-lambdas.sh  deploy-all.sh  deploy-lambdas.sh  deploy.sh  destroy.sh  init.sh  output.sh  plan.sh  update-lambdas.sh
test/e2e/: README.md  cleanup.py  conftest.py  requirements.txt  test_aws_integration.py  test_local.py
test/vpctest/: private-subnet-tests.sh  public-subnet-tests.sh  run-vpc-tests.sh  vpc-test.yaml
